17770
{code}
import scala.reflect.macros.Context
import language.experimental.macros

object Macros {
  def impl(c: Context) = {
    import c.universe._
    c.enclosingTemplate match {
      case Template(parents, self, defs) =>
        Template(List(Ident(TypeName("AnyRef"))), self, defs)
    }
  }

  type Foo = macro impl
}
{code}

{code}
import Macros._

object Test extends App {
  class D extends Foo with IDoNotExist
}
{code}

{code}
00:41 ~/Projects/Kepler_typemacros/sandbox (paradise/macros)$ scalac Macros.scala && scalac Test.scala 
Test.scala:4: error: not found: type IDoNotExist
  class D extends Foo with IDoNotExist
                           ^
one error found
{code}
